--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: test-title's homepage
+title: Alphadai's homepage
 description: Bookmark this to keep an eye on my project updates!
